mark branch with correct state and timestamp